starting on KE data

--- a/maisha_reports/KE - Activites - Last 90Days - From Mar-20.ipynb
+++ b/maisha_reports/KE - Activites - Last 90Days - From Mar-20.ipynb
@@ -2030,7 +2030,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "## Using R\n"
+   ]
   },
   {
    "cell_type": "code",
