starting on raw KE data

--- a/utils/load_envz.ipynb
+++ b/utils/load_envz.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +114,8 @@
     "        \"Community Events\" : { \"# Events\": \"sum\", \"Avg.CHP Events\": \"mean\"}, \n",
     "        \"All Malaria Assessments\" : { \"# Malaria Cases\": \"sum\", \"Avg.CHP Malaria\": \"mean\"},\n",
     "        \"Total U5 Assessments\" : { \"# Child Cases\": \"sum\", \"Avg.CHP U5\": \"mean\"},\n",
-    "        \"Total U1 Assessments\" : { \"# U1 Cases\": \"sum\", \"Avg.CHP U1\": \"mean\"},        \n",
+    "        \"Total U1 Assessments\" : { \"# U1 Cases\": \"sum\", \"Avg.CHP U1\": \"mean\"},  \n",
+    "        \"On Time Referral f/u Treatment U5\" : {\"# Referrals f/u\":\"sum\", \"Avg.CHP Referral f/u\": \"mean\" }\n",
     "    }\n",
     "    return dtset.groupby(grp).agg( argz).round(0)\n",
     "\n",
