--- a/ogembo_views/OG_Baselines_V00 (1).ipynb
+++ b/ogembo_views/OG_Baselines_V00 (1).ipynb
@@ -31,7 +31,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#Ogembo-View\" data-toc-modified-id=\"Ogembo-View-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Ogembo View</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ogemba-Last-90-Days-as-at-&lt;span id='python_ED3FF5DE096C44CEA5DD9ED88A5D385E_146'&gt;&lt;/span&gt;\" data-toc-modified-id=\"Ogemba-Last-90-Days-as-at-<span id='python_ED3FF5DE096C44CEA5DD9ED88A5D385E_34'></span>-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Ogemba Last 90 Days as at <span id=\"python_ED3FF5DE096C44CEA5DD9ED88A5D385E_76\"></span></a></span><ul class=\"toc-item\"><li><span><a href=\"#Summary-Stats\" data-toc-modified-id=\"Summary-Stats-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Summary Stats</a></span></li><li><span><a href=\"#Correlations\" data-toc-modified-id=\"Correlations-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>Correlations</a></span></li><li><span><a href=\"#t-test-Group-Means\" data-toc-modified-id=\"t-test-Group-Means-2.1.3\"><span class=\"toc-item-num\">2.1.3&nbsp;&nbsp;</span>t-test Group Means</a></span></li></ul></li></ul></li><li><span><a href=\"#All-KE-2015---2017\" data-toc-modified-id=\"All-KE-2015---2017-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>All KE 2015 - 2017</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ogembo-2015---2017\" data-toc-modified-id=\"Ogembo-2015---2017-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Ogembo 2015 - 2017</a></span></li><li><span><a href=\"#Summarizing\" data-toc-modified-id=\"Summarizing-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Summarizing</a></span></li><li><span><a href=\"#Summaries-KE-2015---2017\" data-toc-modified-id=\"Summaries-KE-2015---2017-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Summaries KE 2015 - 2017</a></span></li></ul></li><li><span><a href=\"#Ogembo-2015---2017\" data-toc-modified-id=\"Ogembo-2015---2017-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Ogembo 2015 - 2017</a></span></li><li><span><a href=\"#Appendix\" data-toc-modified-id=\"Appendix-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Appendix</a></span><ul class=\"toc-item\"><li><span><a href=\"#Summary-Stats-for-Ogembo\" data-toc-modified-id=\"Summary-Stats-for-Ogembo-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Summary Stats for Ogembo</a></span><ul class=\"toc-item\"><li><span><a href=\"#By-HH-Quintiles\" data-toc-modified-id=\"By-HH-Quintiles-5.1.1\"><span class=\"toc-item-num\">5.1.1&nbsp;&nbsp;</span>By HH Quintiles</a></span><ul class=\"toc-item\"><li><span><a href=\"#HH\" data-toc-modified-id=\"HH-5.1.1.1\"><span class=\"toc-item-num\">5.1.1.1&nbsp;&nbsp;</span>HH</a></span></li></ul></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#Ogembo-View\" data-toc-modified-id=\"Ogembo-View-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Ogembo View</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ogemba-Last-90-Days-as-at-{{LAST_DATED}}\" data-toc-modified-id=\"Ogemba-Last-90-Days-as-at-{{LAST_DATED}}-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Ogemba Last 90 Days as at {{LAST_DATED}}</a></span><ul class=\"toc-item\"><li><span><a href=\"#Summary-Stats\" data-toc-modified-id=\"Summary-Stats-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Summary Stats</a></span></li><li><span><a href=\"#Correlations\" data-toc-modified-id=\"Correlations-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>Correlations</a></span></li><li><span><a href=\"#t-test-Group-Means\" data-toc-modified-id=\"t-test-Group-Means-2.1.3\"><span class=\"toc-item-num\">2.1.3&nbsp;&nbsp;</span>t-test Group Means</a></span></li></ul></li></ul></li><li><span><a href=\"#All-KE-2015---2017\" data-toc-modified-id=\"All-KE-2015---2017-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>All KE 2015 - 2017</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ogembo-2015---2017\" data-toc-modified-id=\"Ogembo-2015---2017-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Ogembo 2015 - 2017</a></span></li><li><span><a href=\"#Summarizing\" data-toc-modified-id=\"Summarizing-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Summarizing</a></span></li><li><span><a href=\"#Summaries-KE-2015---2017\" data-toc-modified-id=\"Summaries-KE-2015---2017-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Summaries KE 2015 - 2017</a></span></li></ul></li><li><span><a href=\"#Ogembo-2015---2017\" data-toc-modified-id=\"Ogembo-2015---2017-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Ogembo 2015 - 2017</a></span></li><li><span><a href=\"#Appendix\" data-toc-modified-id=\"Appendix-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Appendix</a></span><ul class=\"toc-item\"><li><span><a href=\"#Summary-Stats-for-Ogembo\" data-toc-modified-id=\"Summary-Stats-for-Ogembo-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Summary Stats for Ogembo</a></span><ul class=\"toc-item\"><li><span><a href=\"#By-HH-Quintiles\" data-toc-modified-id=\"By-HH-Quintiles-5.1.1\"><span class=\"toc-item-num\">5.1.1&nbsp;&nbsp;</span>By HH Quintiles</a></span><ul class=\"toc-item\"><li><span><a href=\"#HH\" data-toc-modified-id=\"HH-5.1.1.1\"><span class=\"toc-item-num\">5.1.1.1&nbsp;&nbsp;</span>HH</a></span></li></ul></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -58,6 +58,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -73,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -126,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Calaculated fields\n",
@@ -1215,7 +1220,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1277,7 +1284,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Variables\n",
@@ -5079,7 +5088,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -5088,7 +5099,7 @@
   "anaconda-cloud": {},
   "hide_input": true,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5102,7 +5113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "toc": {
    "nav_menu": {},
