refactoring LG.kE

--- a/ogembo_views/output/notebook.tex
+++ b/ogembo_views/output/notebook.tex
@@ -288,8 +288,7 @@
 
 {{2~~}Ogembo View}
 
-{}-2.1"\textgreater{}{2.1~~}Ogemba Last 90 Days as at
-\protect\hypertarget{python_ED3FF5DE096C44CEA5DD9ED88A5D385E_76}{}{}
+{{2.1~~}Ogemba Last 90 Days as at \{\{LAST\_DATED\}\}}
 
 {{2.1.1~~}Summary Stats}
 
